test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-nonnil-owned.good
init-field-dflt-nonnil-shared-from-nonnil-owned.chpl:8: warning: assigning owned class to shared class is deprecated.
init-field-dflt-nonnil-shared-from-nonnil-owned.chpl:13: error: done
